# streamlit_ts_app

./: app.py  notas.txt  prophet_test.py  prophet_test_additional_reg.py  pyproject.toml  test_shap.py
data/: data_test.csv  dataset_clean_slv.xlsx  dataset_clean_slv_administrativos_reales.xlsx  datos.csv  reg_actualizados.csv
streamlit_app/: dashboard.py  dashboard_prophet.py
streamlit_app/cli/: __main__.py  deploy.py
streamlit_app/config/: config_instructions.toml  config_readme.toml  config_streamlit.toml
streamlit_app/lib/inputs/: dataset.py  eval.py
streamlit_app/lib/utils/: load.py
