[project]
name = "streamlit_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.4.0",
    "openpyxl>=3.1.5",
    "plotly>=6.2.0",
    "prophet>=1.1.7",
    "pyqt5==5.15.10",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "stqdm>=0.0.5",
    "streamlit>=1.45.1",
    "toml>=0.10.2",
    "typer>=0.16.0",
]

[dependency-groups]
dev = []
